// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> should render english text 1`] = `
<h1
  class="title__name"
>
  Hi, I'm Jimmy
</h1>
`;

exports[`<Home /> should render english text 2`] = `
<h2
  class="title__caption"
>
  I'm a Web Developer
</h2>
`;

exports[`<Home /> should render snapshot with not isEnglish 1`] = `
<h1
  class="title__name"
>
  Hola, Soy Jimmy
</h1>
`;

exports[`<Home /> should render snapshot with not isEnglish 2`] = `
<h2
  class="title__caption"
>
  Soy un Desarrollador de Web
</h2>
`;
